--- a/17/17.vcxproj.filters
+++ b/17/17.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Library.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Exeption.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
